--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://github.com/carlosraez/carlosraez.github.io/blob/master/images/carlosraez.png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://github.com/carlosraez/carlosraez.github.io/blob/master/images/carlosraez.png?raw=true" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Carlos Raez</strong>, tu perfil.<br />
 			</header>
