--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://github.com/carlosraez/carlosraez.github.io/blob/master/images/carlosraez.png?raw=true" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Carlos Raez</strong>, tu perfil.<br />
+				<h1><strong>Carlos Raez</strong>, Obsesionado con la satisfacción del cliente<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Consultor Marketing - Online-Offline</h2>
+							<h2>Consultor Marketing - Online/Offline</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear campañas de venta, analisis de datos y mejoras de producto</p>
