--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://github.com/carlosraez/carlosraez.github.io/blob/master/images/carlosraez.png?raw=true" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Carlos Raez</strong>, Obsesionado con la satisfacción del cliente<br />
+				<h1><strong>Carlos Raez</strong>, Solo mejora tu producto<br />
 			</header>
 
 		<!-- Contenido principal -->
