--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- Tu perfil - Descripción -->
 						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear campañas de venta, analisis de datos y mejoras de producto</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/carlos-raez-campos-a7353b36" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
