Puesta Red social Github y eslogan cambiado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://github.com/carlosraez/carlosraez.github.io/blob/master/images/carlosraez.png?raw=true" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Carlos Raez</strong>, Esuchar a tu cliente, Escuchar tu negocio<br />
+				<h1><strong>Carlos Raez</strong>, Si escuchas bien a los clientes, sabrás cambiar el mercado<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -67,6 +67,8 @@
 					<li><a href="https://www.facebook.com/Jessica-Yellow-716551978447705/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://growthhackers.com/members/jessicayellow" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
 					<li><a href="mailto:jessicayellow.marketing@gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/carlosraez" target="_blank" class="icon fa fa-github"><span class="label">Github</span></a></li>
+					 
 				</ul>
 				
 		<!-- El área final -->				
